--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -34,5 +34,9 @@ clean-targets:         # directories to be removed by `dbt clean`
 models:
   nurdin_dbt:
     # Applies to all files under models/example/
+    data-catalog:
+      materialized: table
+    vp:
+      materialized: table
     example:
       materialized: view
